apps/ldap/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap
spec:
  ports:
    - name: ldap
      port: 389
      targetPort: ldap
    - name: ldaps
      port: 636
      targetPort: ldaps
  selector:
    app.kubernetes.io/instance: ldap
    app.kubernetes.io/name: ldap
